Changes for 1.0beta8:

 - added misc/snmptrap/snmptrap.sh (Alexei)
 - group selection for Item configuration form (Alexei)
 - added support for SLA level in IT Services (Alexei)
 - added fields services.showsla and services.goodsla (Alexei)
 - added field items.snmp_port (Alexei)
 - user-defined port number for SNMP requests (Alexei)
 - fixed SQL errors when adding host to IT Services (Alexei)
 - added chart_sla.php (Alexei)
 - fixed incorrect handling of timeouts when sendign emails
 (Alexei)
 - fixed selection of recipient in trigger actions (Alexei)
 - fixed Plain Text values (Alexei)
 - fixed improper handling of special characters i.e. '\/" (Alexei)
 - fixed Last100 and Prev100 for both Alarms and Alerts (Alexei)
 - fixed "STATUS OF ZABBIX". Command was changed to 'ps aux' (Alexei)
 - personalisation (remember default port number for hosts) (Alexei)
 - added table 'profiles' (Alexei)
 - assured uniqueness of host names (Alexei)
 - added upgrades/dbpatches/1.0beta7_to_1.0beta8/ with patches (Alexei)
 - mass update for triggers (activate, deactivate, delete) (Alexei)
 - all sendto() and recvfrom() were changed to write() and read() in function
 send_mail() (Alexei)
 - fixed bug in host addition procedure when template host is used (Alexei) 
 - different colors for different status of items, triggers, users
 (Alexei)

Changes for 1.0beta7:

 - startup scripts for RedHat 8.0. Thanks to John Crunk. (Alexei)
 - refresh rate is doubled for user 'guest' (Alexei)
 - mass insert and delete for items. (Alexei)
 - support for SNMPv2. New item type introduced. (Alexei)
 - improvements in housekeeping procedure (Alexei)
 - improvements for chart.php (Alexei)
 - added severity to pre-defined triggers (Alexei)
 - SO_LINGER is not default socket() option for zabbix_sender. (Alexei)
 - recvfrom() and sendto() were changed to read() and write() (Alexei)
 - fixed housekeeping procedure. Upgrade carefully! (Alexei)
 - support of template hosts. Remove tables hosts_templates and