@@ -2,7 +2,6 @@ TOP PRIORITY:
 
  - improve graphing capabilities
  - support for net-snmp
- - SNMP trapping
 
 BUGS:
 
