@@ -1,5 +1,35 @@
 #!/bin/bash
 
+# 
+# Zabbix
+# Copyright (C) 2000,2001,2002,2003 Alexei Vladishev
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+#
+
+# CONFIGURATION
+
+ZABBIX_SERVER="zabbix";
+ZABBIX_PORT="10001";
+
+ZABBIX_SENDER="~zabbix/bin/zabbix_sender";
+
+KEY="snmptraps";
+HOST="snmptraps";
+
+# END OF CONFIGURATION
 
 read hostname
 read ip
@@ -19,10 +49,8 @@ community=`echo $community|cut -f2 -d'"'`
 
 str="$hostname $address $community $enterprise $oid"
 
-#echo $oid >>/tmp/log
-#echo $address >>/tmp/log
-#echo $community >>/tmp/log
-#echo $enterprise >>/tmp/log
-
->/tmp/log
 echo $str >>/tmp/log
+
+cmd="$ZABBIX_SERVER $ZABBIX_PORT $HOST:$KEY \"$str\""
+
+echo $cmd
